bug: definicao do AWS_REGION como secret ao inves de parametro

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,14 +6,12 @@ on:
       project_name:
         required: true
         type: string
-      aws_region:
-        required: false
-        type: string
-        default: "sa-east-1"
     secrets:
       AWS_ACCESS_KEY_ID:
         required: true
       AWS_SECRET_ACCESS_KEY:
+        required: true
+      AWS_REGION:
         required: true
 
 env:
