bug: capturando chave correta do AWS_REGION para utilizacao no processo

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ on:
         required: true
 
 env:
-  AWS_REGION: ${{ inputs.aws_region }}
+  AWS_REGION: ${{ secrets.AWS_REGION }}
 
 jobs:
   deploy:
