--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,16 +6,14 @@ on:
       project_name:
         required: true
         type: string
+      aws_region:
+        required: true
+        type: string
     secrets:
       AWS_ACCESS_KEY_ID:
         required: true
       AWS_SECRET_ACCESS_KEY:
         required: true
-      AWS_REGION:
-        required: true
-
-env:
-  AWS_REGION: ${{ secrets.AWS_REGION }}
 
 jobs:
   deploy:
@@ -30,6 +28,8 @@ jobs:
 
       - id: set-image
         name: Gerar tag da imagem
+        env:
+          AWS_REGION: ${{ inputs.AWS_REGION }}
         run: |
           IMAGE_TAG=$(date +%Y%m%d%H%M%S)
           REPO_NAME="${{ inputs.project_name }}"
