--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,9 @@ on:
       project_name:
         required: true
         type: string
+      ref:
+        required: true
+        type: string
     secrets:
       AWS_ACCESS_KEY_ID:
         required: true
@@ -21,6 +24,8 @@ jobs:
     steps:
       - name: Checkout código Terraform
         uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.ref }}
 
       - name: Instalar Terraform
         uses: hashicorp/setup-terraform@v3
@@ -53,6 +58,8 @@ jobs:
     steps:
       - name: Checkout código
         uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.ref }}
 
       - name: Configurar AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
@@ -67,7 +74,7 @@ jobs:
           IMAGE_TAG=$(date +%Y%m%d%H%M%S)
           REPO_NAME="${{ inputs.project_name }}"
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text --region ${{ secrets.AWS_REGION }})
-          ECR_URI="$ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPO_NAME"
+          ECR_URI="$ACCOUNT_ID.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/$REPO_NAME"
           IMAGE_URI="$ECR_URI:$IMAGE_TAG"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "ecr_uri=$ECR_URI" >> $GITHUB_OUTPUT
@@ -75,7 +82,7 @@ jobs:
 
       - name: Login no ECR
         run: |
-          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${{ steps.set-image.outputs.ecr_uri }}
+          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ steps.set-image.outputs.ecr_uri }}
 
       - name: Build Docker
         run: docker build -t "${{ inputs.project_name }}:$IMAGE_TAG" .
@@ -97,6 +104,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: infra
+          ref: ${{ inputs.ref }}
 
       - name: Instalar Terraform
         uses: hashicorp/setup-terraform@v3
