--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ on:
       ref:
         required: true
         type: string
+      repo:
+        required: true
+        type: string
     secrets:
       AWS_ACCESS_KEY_ID:
         required: true
@@ -25,7 +28,9 @@ jobs:
       - name: Checkout código Terraform
         uses: actions/checkout@v3
         with:
+          repository: ${{ inputs.repo }}
           ref: ${{ inputs.ref }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Instalar Terraform
         uses: hashicorp/setup-terraform@v3
@@ -59,7 +64,9 @@ jobs:
       - name: Checkout código
         uses: actions/checkout@v3
         with:
+          repository: ${{ inputs.repo }}
           ref: ${{ inputs.ref }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Configurar AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
@@ -103,8 +110,10 @@ jobs:
       - name: Checkout código Terraform
         uses: actions/checkout@v3
         with:
-          path: infra
+          repository: ${{ inputs.repo }}
           ref: ${{ inputs.ref }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          path: infra
 
       - name: Instalar Terraform
         uses: hashicorp/setup-terraform@v3
