--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ on:
         required: true
 
 jobs:
-  # 🚀 1. Criar Infra
+  # 1. Criar Infra com módulo ecs_service
   infra:
     runs-on: ubuntu-latest
     outputs:
@@ -37,7 +37,7 @@ jobs:
       - name: Extrair só o nome do repo (parte após /)
         id: extract_name
         run: |
-          echo "::set-output name=project_name_clean::$(echo '${{ inputs.project_name }}' | cut -d'/' -f2)"
+          echo "project_name_clean=$(echo '${{ inputs.project_name }}' | cut -d'/' -f2)" >> $GITHUB_OUTPUT
 
       - name: Instalar Terraform
         uses: hashicorp/setup-terraform@v3
@@ -51,15 +51,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Terraform Init
-        working-directory: infra
-        run: terraform init
+      - name: Terraform Init e Apply - ecs_service
+        working-directory: infra/ecs_service
+        run: |
+          terraform init
+          terraform apply -auto-approve -var="project_name=${{ steps.extract_name.outputs.project_name_clean }}"
 
-      - name: Terraform Apply Infra
-        working-directory: infra
-        run: terraform apply -auto-approve -var="project_name=${{ steps.extract_name.outputs.project_name_clean }}"
-
-  # 🚀 2. Build e Push da imagem
+  # 2. Build e Push da imagem para ECR (depende do infra)
   package:
     runs-on: ubuntu-latest
     needs: infra
@@ -108,11 +106,10 @@ jobs:
           docker tag "${{ steps.set-image.outputs.ecr_uri }}:$IMAGE_TAG" "${{ steps.set-image.outputs.ecr_uri }}:latest"
           docker push "${{ steps.set-image.outputs.ecr_uri }}:latest"
 
-  # 🚀 3. Atualizar ECS com nova imagem
+  # 3. Atualizar ECS com nova imagem, executando módulo ecs_task (depende do package)
   deploy:
     runs-on: ubuntu-latest
     needs: package
-
     steps:
       - name: Checkout código Terraform
         uses: actions/checkout@v3
@@ -120,7 +117,6 @@ jobs:
           repository: ${{ inputs.repo }}
           ref: ${{ inputs.ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
-          path: infra
 
       - name: Instalar Terraform
         uses: hashicorp/setup-terraform@v3
@@ -134,10 +130,19 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Terraform Init
-        working-directory: infra
-        run: terraform init
-
-      - name: Atualizar ECS com nova imagem
-        working-directory: infra
-        run: terraform apply -auto-approve -var="project_name=${{ needs.infra.outputs.project_name_clean }}" -var="image=${{ needs.package.outputs.image_uri }}"
+      - name: Terraform Init e Apply - ecs_task com nova imagem
+        working-directory: infra/ecs_task
+        run: |
+          terraform init
+          terraform apply -auto-approve \
+            -var="project_name=${{ needs.infra.outputs.project_name_clean }}" \
+            -var="image=${{ needs.package.outputs.image_uri }}" \
+            -var="cpu=${{ vars.cpu }}" \
+            -var="memory=${{ vars.memory }}" \
+            -var="desired_count=${{ vars.desired_count }}" \
+            -var="capacity_provider=${{ vars.capacity_provider }}" \
+            -var="subnet_ids=${{ tojson(vars.subnet_ids) }}" \
+            -var="security_group_id=${{ vars.security_group_id }}" \
+            -var="cluster_id=${{ vars.cluster_id }}" \
+            -var="target_group_arn=${{ vars.target_group_arn }}" \
+            -var="lb_listener_depends_on=${{ vars.lb_listener_depends_on }}"
