--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,148 +25,109 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       project_name_clean: ${{ steps.extract_name.outputs.project_name_clean }}
-      security_group_id: ${{ steps.tf_apply.outputs.security_group_id }}
-      cluster_id: ${{ steps.tf_apply.outputs.cluster_id }}
-      target_group_arn: ${{ steps.tf_apply.outputs.target_group_arn }}
+      security_group_id_b64: ${{ steps.tf_apply.outputs.security_group_id_b64 }}
+      cluster_id_b64: ${{ steps.tf_apply.outputs.cluster_id_b64 }}
+      target_group_arn_b64: ${{ steps.tf_apply.outputs.target_group_arn_b64 }}
     steps:
       - name: Checkout código Terraform
         uses: actions/checkout@v3
-        with:
-          repository: ${{ inputs.repo }}
-          ref: ${{ inputs.ref }}
-          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extrair só o nome do repo (parte após /)
+      - name: Extrair project_name_clean
         id: extract_name
         run: |
-          echo "project_name_clean=$(echo '${{ inputs.project_name }}' | cut -d'/' -f2)" >> $GITHUB_OUTPUT
+          CLEAN=$(echo "${{ inputs.project_name }}" | cut -d'/' -f2)
+          echo "project_name_clean=$CLEAN" >> $GITHUB_OUTPUT
 
-      - name: Instalar Terraform
-        uses: hashicorp/setup-terraform@v3
+      - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
 
-      - name: Configurar AWS CLI
-        uses: aws-actions/configure-aws-credentials@v2
+      - uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Terraform Init e Apply - ecs_infra
+      - name: Terraform Init & Apply
         id: tf_apply
-        working-directory: infra/ecs_infra
         run: |
           terraform init
           terraform apply -auto-approve -var="project_name=${{ steps.extract_name.outputs.project_name_clean }}"
-          echo "DEBUG: security_group_id=$(terraform output -raw security_group_id)"
-          echo "DEBUG: cluster_id=$(terraform output -raw cluster_id)"
-          echo "DEBUG: target_group_arn=$(terraform output -raw target_group_arn)"
-          echo "security_group_id=$(terraform output -raw security_group_id | tr -d '\r\n')" >> $GITHUB_OUTPUT
-          echo "cluster_id=$(terraform output -raw cluster_id | tr -d '\r\n')" >> $GITHUB_OUTPUT
-          echo "target_group_arn=$(terraform output -raw target_group_arn | tr -d '\r\n')" >> $GITHUB_OUTPUT
-
-      - name: Debug Output target_group_arn
-        run: |
-          echo "DEBUG: security_group_id=$(terraform output -raw security_group_id)"
-          echo "DEBUG: cluster_id=$(terraform output -raw cluster_id)"
-          echo "DEBUG: target_group_arn=$(terraform output -raw target_group_arn)"
-          echo "security_group_id=$(terraform output -raw security_group_id | tr -d '\r\n')" >> $GITHUB_OUTPUT
-          echo "cluster_id=$(terraform output -raw cluster_id | tr -d '\r\n')" >> $GITHUB_OUTPUT
-          echo "target_group_arn=$(terraform output -raw target_group_arn | tr -d '\r\n')" >> $GITHUB_OUTPUT
+          # pega os outputs
+          SG=$(terraform output -raw security_group_id)
+          CLUSTER=$(terraform output -raw cluster_id)
+          TG=$(terraform output -raw target_group_arn)
+          # codifica base64 duas vezes
+          SG_B64=$(echo -n "$SG" | base64 -w0 | base64 -w0)
+          CLUSTER_B64=$(echo -n "$CLUSTER" | base64 -w0 | base64 -w0)
+          TG_B64=$(echo -n "$TG" | base64 -w0 | base64 -w0)
+          echo "security_group_id_b64=$SG_B64" >> $GITHUB_OUTPUT
+          echo "cluster_id_b64=$CLUSTER_B64" >> $GITHUB_OUTPUT
+          echo "target_group_arn_b64=$TG_B64" >> $GITHUB_OUTPUT
 
   package:
-    runs-on: ubuntu-latest
     needs: infra
+    runs-on: ubuntu-latest
     outputs:
-      image_uri: ${{ steps.set-image.outputs.image_uri }}
-      ecr_uri: ${{ steps.set-image.outputs.ecr_uri }}
+      image_uri_b64: ${{ steps.set-image.outputs.image_uri_b64 }}
     steps:
-      - name: Checkout código
-        uses: actions/checkout@v3
-        with:
-          repository: ${{ inputs.repo }}
-          ref: ${{ inputs.ref }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v3
 
-      - name: Configurar AWS CLI
-        uses: aws-actions/configure-aws-credentials@v2
+      - uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
       - id: set-image
-        name: Definir URIs da imagem
         run: |
-          IMAGE_TAG=$(date +%Y%m%d%H%M%S)
-          REPO_NAME="${{ needs.infra.outputs.project_name_clean }}"
-          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text --region ${{ secrets.AWS_REGION }})
-          ECR_URI="$ACCOUNT_ID.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/$REPO_NAME"
-          IMAGE_URI="$ECR_URI:$IMAGE_TAG"
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-          echo "ecr_uri=$ECR_URI" >> $GITHUB_OUTPUT
-          echo "image_uri=$IMAGE_URI" >> $GITHUB_OUTPUT
-
-      - name: Login no ECR
+          TAG=$(date +%Y%m%d%H%M%S)
+          REPO="${{ needs.infra.outputs.project_name_clean }}"
+          ACCOUNT=$(aws sts get-caller-identity --query Account --output text --region ${{ secrets.AWS_REGION }})
+          URI="$ACCOUNT.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/$REPO:$TAG"
+          IMG_B64=$(echo -n "$URI" | base64 -w0 | base64 -w0)
+          echo "image_uri_b64=$IMG_B64" >> $GITHUB_OUTPUT
+      - name: Build & Push
         run: |
-          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ steps.set-image.outputs.ecr_uri }}
-
-      - name: Build Docker
-        run: docker build -t "${{ needs.infra.outputs.project_name_clean }}:$IMAGE_TAG" .
-
-      - name: Tag e Push da Imagem
-        run: |
-          docker tag "${{ needs.infra.outputs.project_name_clean }}:$IMAGE_TAG" "${{ steps.set-image.outputs.ecr_uri }}:$IMAGE_TAG"
-          docker push "${{ steps.set-image.outputs.ecr_uri }}:$IMAGE_TAG"
-          docker tag "${{ steps.set-image.outputs.ecr_uri }}:$IMAGE_TAG" "${{ steps.set-image.outputs.ecr_uri }}:latest"
-          docker push "${{ steps.set-image.outputs.ecr_uri }}:latest"
+          URI=$(echo "${{ steps.set-image.outputs.image_uri_b64 }}" | base64 -d | base64 -d)
+          docker build -t "$URI" .
+          docker push "$URI"
 
   deploy:
-    runs-on: ubuntu-latest
     needs: [infra, package]
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout código Terraform
-        uses: actions/checkout@v3
-        with:
-          repository: ${{ inputs.repo }}
-          ref: ${{ inputs.ref }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v3
 
-      - name: Instalar Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.6.6
-
-      - name: Configurar AWS CLI
-        uses: aws-actions/configure-aws-credentials@v2
+      - uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Terraform Plan - ecs_app (debug)
+      - name: Decodificar outputs
+        run: |
+          SG=$(echo "${{ needs.infra.outputs.security_group_id_b64 }}" | base64 -d | base64 -d)
+          CLUSTER=$(echo "${{ needs.infra.outputs.cluster_id_b64 }}" | base64 -d | base64 -d)
+          TG=$(echo "${{ needs.infra.outputs.target_group_arn_b64 }}" | base64 -d | base64 -d)
+          IMG=$(echo "${{ needs.package.outputs.image_uri_b64 }}" | base64 -d | base64 -d)
+          echo "::add-mask::$SG"
+          echo "::add-mask::$CLUSTER"
+          echo "::add-mask::$TG"
+          echo "::add-mask::$IMG"
+          echo "security_group_id=$SG" >> $GITHUB_ENV
+          echo "cluster_id=$CLUSTER" >> $GITHUB_ENV
+          echo "target_group_arn=$TG" >> $GITHUB_ENV
+          echo "image_uri=$IMG" >> $GITHUB_ENV
+
+      - name: Terraform Apply ecs_app
         working-directory: infra/ecs_app
         run: |
-          echo "🔍 DEBUG: target_group_arn recebido da etapa 'infra':"
-          echo "${{ needs.infra.outputs.target_group_arn }}"
-          echo "🔍 DEBUG: security_group_id:"
-          echo "${{ needs.infra.outputs.security_group_id }}"
-          echo "🔍 DEBUG: image URI:"
-          echo "${{ needs.package.outputs.image_uri }}"
-
           terraform init
-          terraform plan \
-            -var="project_name=${{ needs.infra.outputs.project_name_clean }}" \
-            -var="image=${{ needs.package.outputs.image_uri }}" \
-            -var="security_group_id=${{ needs.infra.outputs.security_group_id }}" \
-            -var="target_group_arn=${{ needs.infra.outputs.target_group_arn }}"
-
-      - name: Terraform Apply - ecs_app com nova imagem
-        working-directory: infra/ecs_app
-        run: |
           terraform apply -auto-approve \
             -var="project_name=${{ needs.infra.outputs.project_name_clean }}" \
-            -var="image=${{ needs.package.outputs.image_uri }}" \
-            -var="security_group_id=${{ needs.infra.outputs.security_group_id }}" \
-            -var="target_group_arn=${{ needs.infra.outputs.target_group_arn }}"
+            -var="image=${{ env.image_uri }}" \
+            -var="security_group_id=${{ env.security_group_id }}" \
+            -var="cluster_id=${{ env.cluster_id }}" \
+            -var="target_group_arn=${{ env.target_group_arn }}"
+
