--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,9 @@
 name: Deploy AWS
 
+# Este workflow é acionado por outro workflow (workflow_call)
+# Recebe como inputs: project_name, ref, repo
+# Recebe como secrets: AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_REGION
+
 on:
   workflow_call:
     inputs:
@@ -21,45 +25,52 @@ on:
         required: true
 
 jobs:
+
+  # JOB 1: Infraestrutura
   infra:
     runs-on: ubuntu-latest
+
+    # Outputs para os próximos jobs consumirem
     outputs:
       project_name_clean: ${{ steps.extract_name.outputs.project_name_clean }}
       security_group_id_b64: ${{ steps.tf_apply.outputs.security_group_id_b64 }}
       cluster_id_b64: ${{ steps.tf_apply.outputs.cluster_id_b64 }}
       target_group_arn_b64: ${{ steps.tf_apply.outputs.target_group_arn_b64 }}
+
     steps:
-      - name: Checkout código Terraform
+      - name: Checkout do código Terraform
         uses: actions/checkout@v3
         with:
           repository: ${{ inputs.repo }}
           ref: ${{ inputs.ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extrair só o nome do repo (parte após /)
+      - name: Extrair nome limpo do projeto (parte após "/")
         id: extract_name
         run: |
+          # Exemplo: se project_name = "user/repo", extrai "repo"
           echo "project_name_clean=$(echo '${{ inputs.project_name }}' | cut -d'/' -f2)" >> $GITHUB_OUTPUT
 
-      - name: Instalar Terraform
+      - name: Instalar Terraform (versão 1.6.6)
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
 
-      - name: Configurar AWS CLI
+      - name: Configurar credenciais AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Terraform Init e Apply - ecs_infra
+      - name: Terraform Init e Apply no módulo ecs_infra
         id: tf_apply
         working-directory: infra/ecs_infra
         run: |
           terraform init
           terraform apply -auto-approve -var="project_name=${{ steps.extract_name.outputs.project_name_clean }}"
 
+          # Extrai outputs do terraform e remove possíveis quebras de linha
           SG=$(terraform output -raw security_group_id | tr -d '\r\n')
           CLUSTER=$(terraform output -raw cluster_id | tr -d '\r\n')
           TG=$(terraform output -raw target_group_arn | tr -d '\r\n')
@@ -68,25 +79,30 @@ jobs:
           echo "DEBUG: cluster_id=$CLUSTER"
           echo "DEBUG: target_group_arn=$TG"
 
+          # Encode em base64 duplo para passagem segura
           echo "security_group_id_b64=$(echo -n $SG | base64 -w0 | base64 -w0)" >> $GITHUB_OUTPUT
           echo "cluster_id_b64=$(echo -n $CLUSTER | base64 -w0 | base64 -w0)" >> $GITHUB_OUTPUT
           echo "target_group_arn_b64=$(echo -n $TG | base64 -w0 | base64 -w0)" >> $GITHUB_OUTPUT
 
+
+  # JOB 2: Build e Push da Imagem Docker para ECR
   package:
     runs-on: ubuntu-latest
     needs: infra
+
     outputs:
       image_uri_b64: ${{ steps.set-image.outputs.image_uri_b64 }}
       ecr_uri: ${{ steps.set-image.outputs.ecr_uri }}
+
     steps:
-      - name: Checkout código
+      - name: Checkout do código fonte
         uses: actions/checkout@v3
         with:
           repository: ${{ inputs.repo }}
           ref: ${{ inputs.ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Configurar AWS CLI
+      - name: Configurar credenciais AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -94,56 +110,62 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - id: set-image
-        name: Definir URIs da imagem
+        name: Definir URIs da imagem Docker
         run: |
-          IMAGE_TAG=$(date +%Y%m%d%H%M%S)
-          REPO_NAME="${{ needs.infra.outputs.project_name_clean }}"
+          IMAGE_TAG=$(date +%Y%m%d%H%M%S)  # Tag com timestamp
+          REPO_NAME="${{ needs.infra.outputs.project_name_clean }}"  # Nome do repo extraído do job infra
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text --region ${{ secrets.AWS_REGION }})
           ECR_URI="$ACCOUNT_ID.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/$REPO_NAME"
           IMAGE_URI="$ECR_URI:$IMAGE_TAG"
-          IMG_B64=$(echo -n "$IMAGE_URI" | base64 -w0 | base64 -w0)
+          IMG_B64=$(echo -n "$IMAGE_URI" | base64 -w0 | base64 -w0)  # Encode duplo base64
+
+          # Exporta variáveis para os próximos passos
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "ecr_uri=$ECR_URI" >> $GITHUB_OUTPUT
           echo "image_uri_b64=$IMG_B64" >> $GITHUB_OUTPUT
 
-      - name: Login no ECR
+      - name: Login no Amazon ECR
         run: |
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ steps.set-image.outputs.ecr_uri }}
 
-      - name: Build Docker
+      - name: Build da imagem Docker
         run: docker build -t "${{ needs.infra.outputs.project_name_clean }}:$IMAGE_TAG" .
 
-      - name: Tag e Push da Imagem
+      - name: Tag e push da imagem Docker para o ECR
         run: |
           docker tag "${{ needs.infra.outputs.project_name_clean }}:$IMAGE_TAG" "${{ steps.set-image.outputs.ecr_uri }}:$IMAGE_TAG"
           docker push "${{ steps.set-image.outputs.ecr_uri }}:$IMAGE_TAG"
+          # Atualiza a tag latest
           docker tag "${{ steps.set-image.outputs.ecr_uri }}:$IMAGE_TAG" "${{ steps.set-image.outputs.ecr_uri }}:latest"
           docker push "${{ steps.set-image.outputs.ecr_uri }}:latest"
 
+
+  # JOB 3: Deploy da aplicação no ECS usando Terraform
   deploy:
     runs-on: ubuntu-latest
     needs: [infra, package]
+
     steps:
-      - name: Checkout código Terraform
+      - name: Checkout do código Terraform
         uses: actions/checkout@v3
         with:
           repository: ${{ inputs.repo }}
           ref: ${{ inputs.ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Instalar Terraform
+      - name: Instalar Terraform (versão 1.6.6)
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
 
-      - name: Configurar AWS CLI
+      - name: Configurar credenciais AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Decodificar variáveis
+      - name: Decodificar variáveis base64 (duplo decode)
         run: |
           decode() {
             echo "$1" | base64 -d | base64 -d
@@ -154,17 +176,19 @@ jobs:
           TG=$(decode "${{ needs.infra.outputs.target_group_arn_b64 }}")
           IMG=$(decode "${{ needs.package.outputs.image_uri_b64 }}")
 
+          # Máscara dos valores para não aparecerem nos logs públicos
           echo "::add-mask::$SG"
           echo "::add-mask::$CLUSTER"
           echo "::add-mask::$TG"
           echo "::add-mask::$IMG"
 
+          # Exporta variáveis para o ambiente do job deploy
           echo "security_group_id=$SG" >> $GITHUB_ENV
           echo "cluster_id=$CLUSTER" >> $GITHUB_ENV
           echo "target_group_arn=$TG" >> $GITHUB_ENV
           echo "image_uri=$IMG" >> $GITHUB_ENV
 
-      - name: Terraform Plan - ecs_app (debug)
+      - name: Terraform Plan no módulo ecs_app (com debug)
         working-directory: infra/ecs_app
         run: |
           echo "🔍 DEBUG: target_group_arn: ${{ env.target_group_arn }}"
