--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 name: Deploy AWS
 
-# Este workflow é acionado por outro workflow (workflow_call)
-# Recebe como inputs: project_name, ref, repo
-# Recebe como secrets: AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_REGION
-
+# ─────────────────────────────────────────────────────────────
+# 🔄 Evento: workflow_call
+# Workflow acionado por outro workflow, recebendo inputs e secrets
+# ─────────────────────────────────────────────────────────────
 on:
   workflow_call:
     inputs:
@@ -26,11 +26,14 @@ on:
 
 jobs:
 
-  # JOB 1: Infraestrutura
+  # ─────────────────────────────────────────────────────────────
+  # JOB 1: Infraestrutura (Terraform ecs_infra)
+  # Checkout, extrai nome do projeto, configura AWS e aplica Terraform
+  # Outputs base64 para comunicação entre jobs
+  # ─────────────────────────────────────────────────────────────
   infra:
     runs-on: ubuntu-latest
 
-    # Outputs para os próximos jobs consumirem
     outputs:
       project_name_clean: ${{ steps.extract_name.outputs.project_name_clean }}
       security_group_id_b64: ${{ steps.tf_apply.outputs.security_group_id_b64 }}
@@ -48,10 +51,10 @@ jobs:
       - name: Extrair nome limpo do projeto (parte após "/")
         id: extract_name
         run: |
-          # Exemplo: se project_name = "user/repo", extrai "repo"
+          # Exemplo: "user/repo" -> "repo"
           echo "project_name_clean=$(echo '${{ inputs.project_name }}' | cut -d'/' -f2)" >> $GITHUB_OUTPUT
 
-      - name: Instalar Terraform (versão 1.6.6)
+      - name: Instalar Terraform (v1.6.6)
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
@@ -70,7 +73,7 @@ jobs:
           terraform init
           terraform apply -auto-approve -var="project_name=${{ steps.extract_name.outputs.project_name_clean }}"
 
-          # Extrai outputs do terraform e remove possíveis quebras de linha
+          # Extrai outputs do Terraform
           SG=$(terraform output -raw security_group_id | tr -d '\r\n')
           CLUSTER=$(terraform output -raw cluster_id | tr -d '\r\n')
           TG=$(terraform output -raw target_group_arn | tr -d '\r\n')
@@ -79,13 +82,16 @@ jobs:
           echo "DEBUG: cluster_id=$CLUSTER"
           echo "DEBUG: target_group_arn=$TG"
 
-          # Encode em base64 duplo para passagem segura
+          # Encode duplo base64 para passagem segura entre jobs
           echo "security_group_id_b64=$(echo -n $SG | base64 -w0 | base64 -w0)" >> $GITHUB_OUTPUT
           echo "cluster_id_b64=$(echo -n $CLUSTER | base64 -w0 | base64 -w0)" >> $GITHUB_OUTPUT
           echo "target_group_arn_b64=$(echo -n $TG | base64 -w0 | base64 -w0)" >> $GITHUB_OUTPUT
 
 
-  # JOB 2: Build e Push da Imagem Docker para ECR
+  # ─────────────────────────────────────────────────────────────
+  # JOB 2: Build e Push Docker para ECR
+  # Usa outputs do job infra, configura AWS, cria e envia imagem
+  # ─────────────────────────────────────────────────────────────
   package:
     runs-on: ubuntu-latest
     needs: infra
@@ -113,13 +119,13 @@ jobs:
         name: Definir URIs da imagem Docker
         run: |
           IMAGE_TAG=$(date +%Y%m%d%H%M%S)  # Tag com timestamp
-          REPO_NAME="${{ needs.infra.outputs.project_name_clean }}"  # Nome do repo extraído do job infra
+          REPO_NAME="${{ needs.infra.outputs.project_name_clean }}"
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text --region ${{ secrets.AWS_REGION }})
           ECR_URI="$ACCOUNT_ID.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/$REPO_NAME"
           IMAGE_URI="$ECR_URI:$IMAGE_TAG"
           IMG_B64=$(echo -n "$IMAGE_URI" | base64 -w0 | base64 -w0)  # Encode duplo base64
 
-          # Exporta variáveis para os próximos passos
+          # Exporta variáveis para próximos passos
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           echo "ecr_uri=$ECR_URI" >> $GITHUB_OUTPUT
           echo "image_uri_b64=$IMG_B64" >> $GITHUB_OUTPUT
@@ -135,12 +141,16 @@ jobs:
         run: |
           docker tag "${{ needs.infra.outputs.project_name_clean }}:$IMAGE_TAG" "${{ steps.set-image.outputs.ecr_uri }}:$IMAGE_TAG"
           docker push "${{ steps.set-image.outputs.ecr_uri }}:$IMAGE_TAG"
-          # Atualiza a tag latest
+
+          # Atualiza tag latest
           docker tag "${{ steps.set-image.outputs.ecr_uri }}:$IMAGE_TAG" "${{ steps.set-image.outputs.ecr_uri }}:latest"
           docker push "${{ steps.set-image.outputs.ecr_uri }}:latest"
 
 
-  # JOB 3: Deploy da aplicação no ECS usando Terraform
+  # ─────────────────────────────────────────────────────────────
+  # JOB 3: Deploy ECS com Terraform (ecs_app)
+  # Usa outputs dos jobs anteriores, decodifica e executa plan/apply
+  # ─────────────────────────────────────────────────────────────
   deploy:
     runs-on: ubuntu-latest
     needs: [infra, package]
@@ -153,7 +163,7 @@ jobs:
           ref: ${{ inputs.ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Instalar Terraform (versão 1.6.6)
+      - name: Instalar Terraform (v1.6.6)
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
@@ -176,13 +186,13 @@ jobs:
           TG=$(decode "${{ needs.infra.outputs.target_group_arn_b64 }}")
           IMG=$(decode "${{ needs.package.outputs.image_uri_b64 }}")
 
-          # Máscara dos valores para não aparecerem nos logs públicos
+          # Oculta valores sensíveis dos logs
           echo "::add-mask::$SG"
           echo "::add-mask::$CLUSTER"
           echo "::add-mask::$TG"
           echo "::add-mask::$IMG"
 
-          # Exporta variáveis para o ambiente do job deploy
+          # Exporta variáveis para o ambiente do job
           echo "security_group_id=$SG" >> $GITHUB_ENV
           echo "cluster_id=$CLUSTER" >> $GITHUB_ENV
           echo "target_group_arn=$TG" >> $GITHUB_ENV
